# K-AIR-GraphDB

./: .gitignore  README.md
docs/: GUIDE_RDBMS_to_온톨로지_파이프라인.md  GraphDB_마이그레이션_검증_보고서.md  LLM_통합_테스트_보고서.md  NON_POSTGRES_ADAPTERS_SCOPE.md  Phase1_3_개발_보고서.md  Phase1_5_통합_개발_보고서.md  Phase5_개발_보고서.md  REPORT_계약분리_다중엔진_검증_20260429.md  guide_rdbms_ontology.md
libs/age_graph_repository/: __init__.py  catalog_adapter.py  connection.py  cypher_compat.py  labels.py  pyproject.toml  repository.py  vector_repository.py
libs/age_graph_repository/analyzer/: __init__.py  integration_example.py  pg_analyzer_client.py  pg_business_calendar_service.py  pg_glossary_service.py  pg_graph_query_service.py  pg_lineage_service.py  pg_metadata_service.py  pg_phase_ddl.py  pg_related_tables_service.py  pg_schema_manage_service.py
libs/age_graph_repository/physical_meta/: __init__.py  from_catalog.py  models.py  physical_cypher.py  validation.py  version.py
libs/age_graph_repository/services/: __init__.py  age_behavior_store.py  age_guard.py  age_scenario_store.py  age_schema_store.py  age_service.py  integration_example.py
libs/age_graph_repository/tests/: test_analyzer.py  test_cypher_compat.py  test_integration.py  test_physical_meta.py  test_services.py  test_text2sql.py  test_vector_repository.py
libs/age_graph_repository/text2sql/: __init__.py  integration_example.py  pg_bootstrap.py  pg_connection.py  pg_context.py  pg_graph_search.py  pg_neo4j_utils.py  pg_query_repository.py
scripts/: export_neo4j.py  migrate_neo4j_to_age.py  migrate_neo4j_to_kair_graphdb.py  (+1 more)
(+62 files in other folders)
